# rep_hop_ctrl_simulator

./: .clang-format  .gitignore  README.md  makefile
example/: Pipfile  arl_test.c  euler_test.c  euler_test.py  makefile  mtoka_osci_test.c  mtoka_test.c  plot_one_hop.py  ppp_test.c  pyproject.toml  raibert_test.c  regulator_test.c  rep_hop_stand_test.c  rk4_test.c  run_example.sh  run_test.sh  slip_test.c  slip_test.py  slip_var_stiff_test.c
example/graph_plot/: euler_test.py  hello.py  mtoka_osci_test.py  plot_phase_portrait.py  plot_time_series.py  pyproject.toml  regulator_test.py  rk4_test.py  simple_plot.py  slip_test.py
example/scripts/: euler_test.py  mtoka_osci_test.py  plot_phase_portrait.py  plot_time_series.py  ppp_test.py  pyproject.toml  regulator_test.py  simple_plot.py  slip_test.py  slip_var_stiff_test.py
example/scripts/lib/: datautil.py
include/: rhc_cmd.h  rhc_complex.h  rhc_ctrl.h  rhc_ctrl_arl.h  rhc_ctrl_dummy.h  rhc_ctrl_mtoka.h  rhc_ctrl_raibert.h  rhc_ctrl_regulator.h  rhc_ctrl_rep_hop_stand.h  rhc_ctrl_slip.h  rhc_ctrl_slip_var_stiff.h  rhc_defs.h  rhc_logger.h  rhc_matsuoka_oscillator.h  rhc_misc.h  rhc_model.h  rhc_mtoka_osci.h  rhc_ode.h  rhc_ode_euler.h  rhc_ode_rk4.h  rhc_phase_portrait_plotter.h  rhc_simulator.h  rhc_string.h  rhc_test.h  rhc_test_util.h  rhc_vec.h  rhc_vec_list.h  rhc_vec_ring.h
src/: rhc_cmd.c  rhc_complex.c  rhc_ctrl.c  rhc_ctrl_arl.c  rhc_ctrl_dummy.c  rhc_ctrl_mtoka.c  rhc_ctrl_raibert.c  rhc_ctrl_regulator.c  rhc_ctrl_rep_hop_stand.c  rhc_ctrl_slip.c  rhc_ctrl_slip_var_stiff.c  rhc_logger.c  rhc_matsuoka_oscillator.c  rhc_misc.c  rhc_model.c  rhc_mtoka_osci.c  rhc_ode_euler.c  rhc_ode_rk4.c  rhc_phase_portrait_plotter.c  rhc_simulator.c  rhc_string.c  rhc_test_util.c  rhc_vec.c  rhc_vec_list.c  rhc_vec_ring.c
test/: makefile  rhc_cmd_test.c  rhc_complex_test.c  rhc_ctrl_arl_test.c  rhc_ctrl_dummy_test.c  rhc_ctrl_dynmorph_test.c  rhc_ctrl_mtoka_test.c  rhc_ctrl_raibert_test.c  rhc_ctrl_regulator_test.c  rhc_ctrl_rep_hop_stand_test.c  rhc_ctrl_slip_test.c  rhc_ctrl_slip_var_stiff_test.c  rhc_ctrl_test.c  rhc_logger_test.c  rhc_matsuoka_oscillator_test.c  rhc_misc_test.c  rhc_model_test.c  rhc_mtoka_osci_test.c  rhc_ode_euler_test.c  rhc_ode_rk4_test.c  rhc_phase_portrait_plotter_test.c  rhc_simulator_test.c  rhc_string_test.c  rhc_test.h  rhc_test_test.c  rhc_test_util_test.c  rhc_vec_list_test.c  rhc_vec_ring_test.c  rhc_vec_test.c  run_test.sh  test_runner.sh
