[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Python scripts to create graph figures"
authors = ["Hiroshi Atsuta <atsuta@ieee.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
