[tool.poetry]
name = "rhc_scripts"
version = "0.1.0"
description = "Collection of scripts to create graphs, figures, and so on."
authors = ["Hiroshi Atsuta <atsuta.hiroshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.1"
matplotlib = "^3.5.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
