[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Hiroshi Atsuta", email = "atsuta@ieee.org"},
]
dependencies = [
    "numpy>=1.22.2",
    "matplotlib>=3.5.1",
    "pandas>=1.4.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0.1",
]

[tool.pyright]
extraPaths = [
    "__pypackages__/3.10/lib",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
